Change getdiskinfo() to no longer infer the partition from the device name. Since 2016-06-16 we create disk devices "<type><<unit>" as an alias for "<type><<unit><part>" where "<part>" is the raw partition. These devices are treated as invalid partitions and a zero geometry is returned.

Take the partition from "st_rdev" instead.

Fix for PR kern/57134: st_size of stat on vnd raw partition sometimes
is 0, causing newfs to fail